<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/subjectIdEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/id"
        android:inputType="number" />

    <EditText
        android:id="@+id/homeworkEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/homework" />

    <EditText
        android:id="@+id/gradeEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/grade_1_5"
        android:inputType="number" />
</LinearLayout>