<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/averageGradesText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/avg_gr"
        android:textSize="16sp"
        android:paddingBottom="8dp" />

    <TextView
        android:id="@+id/emptyText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_less"
        android:textSize="16sp"
        android:gravity="center"
        android:visibility="gone" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/addLessonButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_lesson" />
</LinearLayout>