<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/titleText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/daily_details"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/lessonList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/lessons_list"
        app:layout_constraintTop_toBottomOf="@id/titleText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/averageGradeText" />

    <TextView
        android:id="@+id/averageGradeText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/average_grade"
        app:layout_constraintBottom_toTopOf="@id/buttonContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/buttonContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/addSubjectButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_subject"
            android:layout_marginEnd="8dp" />

        <Button
            android:id="@+id/addLessonButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/daily_details"
            android:layout_marginEnd="8dp" />

        <Button
            android:id="@+id/helpButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_000" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>